# fiscal

./: .gitignore  README.md  justfile  pyproject.toml
db/migration/: 10_category_on_products.sql  1_create_bank_accounts.sql  2_add_companies.sql  3_add_namings.sql  4_add_description_nfe.sql  5_add_external_id.sql  6_add_inter_bank.sql  7_value_as_float.sql  8_include_balance.sql  9_include_nfe_products.sql
fiscal/: all_month.sql  banco_inter.py  bb.py  db.py  fetcher.py  itau.py  main.py  match.py  nfes.py  not_validated_transactions.sql  ofx.py  rede.py  reports.py  total_costs.sql  xmls_nfs.py
tests/: test_banco_inter.py  test_banco_inter_client.py
tests/resources/: get_extrato_refinado.yaml  inter_authenticate.yaml  inter_categories.yaml  inter_requests_with_error.yaml  inter_single_requests.yaml  multiple_requests.yaml
